# auto_easycheck

./: Makefile  README.md  pyproject.toml  requirements.txt  run.py  setup.bat  setup.sh
docs/: auto-easycheck-api.md
src/auto_easycheck/: __init__.py  __main__.py  core.py
tests/: __init__.py  test_core.py
